chore: fixes publishing

--- a/.github/actions/install-system-deps/action.yml
+++ b/.github/actions/install-system-deps/action.yml
@@ -21,12 +21,7 @@ runs:
       if: runner.os == 'macOS'
       id: detect-tesseract-macos
       shell: bash
-      run: |
-        set -euo pipefail
-        # Detect installed or available tesseract version
-        VERSION=$(brew info tesseract 2>/dev/null | grep -oP '(?<=tesseract\s)[0-9]+\.[0-9]+' | head -1 || echo 'unknown')
-        echo "version=${VERSION}" >> $GITHUB_OUTPUT
-        echo "::notice title=Tesseract Version::Detected version: ${VERSION}"
+      run: bash scripts/ci/install-system-deps/detect-tesseract-macos.sh
 
     - name: Cache Tesseract & tessdata (macOS)
       if: runner.os == 'macOS'
@@ -54,90 +49,7 @@ runs:
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
       shell: bash
-      run: |
-        set -euo pipefail
-
-        echo "::group::Installing macOS dependencies"
-
-        # Set up retry function
-        retry_with_backoff() {
-          local max_attempts=3
-          local attempt=1
-          local delay=5
-
-          while [ $attempt -le $max_attempts ]; do
-            if "$@"; then
-              return 0
-            fi
-
-            if [ $attempt -lt $max_attempts ]; then
-              echo "⚠ Attempt $attempt failed, retrying in ${delay}s..." >&2
-              sleep $delay
-              delay=$((delay * 2))
-            fi
-            attempt=$((attempt + 1))
-          done
-
-          return 1
-        }
-
-        # Install Tesseract with retry
-        if ! brew list tesseract &>/dev/null; then
-          echo "Installing Tesseract..."
-          retry_with_backoff brew install tesseract || {
-            echo "::error::Failed to install Tesseract after retries"
-            exit 1
-          }
-        else
-          echo "✓ Tesseract already installed"
-        fi
-
-        # Install Tesseract language data with retry
-        if ! brew list tesseract-lang &>/dev/null; then
-          echo "Installing Tesseract language packs..."
-          retry_with_backoff brew install tesseract-lang || {
-            echo "::warning::Failed to install tesseract-lang, some languages may be unavailable"
-          }
-        else
-          echo "✓ Tesseract language packs already installed"
-        fi
-
-        # Install LibreOffice with timeout (can take 10+ minutes)
-        if [ -d "/Applications/LibreOffice.app" ]; then
-          echo "✓ LibreOffice already present"
-        else
-          echo "Installing LibreOffice (this may take 10+ minutes, timeout: 20min)..."
-          # Use timeout to prevent hanging
-          if timeout 1200 retry_with_backoff brew install --cask libreoffice; then
-            echo "✓ LibreOffice installed successfully"
-          else
-            EXIT_CODE=$?
-            if [ $EXIT_CODE -eq 124 ]; then
-              echo "::error::LibreOffice installation timed out after 20 minutes"
-            else
-              echo "::error::LibreOffice installation failed with exit code $EXIT_CODE"
-            fi
-            exit 1
-          fi
-        fi
-
-        echo "::endgroup::"
-
-        # Verify installations
-        echo "::group::Verifying macOS installations"
-
-        echo "Tesseract:"
-        tesseract --version | head -1
-
-        echo ""
-        echo "Available languages:"
-        tesseract --list-langs | head -5
-
-        echo ""
-        echo "LibreOffice:"
-        soffice --version 2>/dev/null || echo "⚠ Warning: soffice not fully available"
-
-        echo "::endgroup::"
+      run: bash scripts/ci/install-system-deps/install-macos.sh
 
     # ============================================================================
     # Linux: Tesseract, LibreOffice, Fonts & Build Tools with Caching
@@ -147,12 +59,7 @@ runs:
       if: runner.os == 'Linux'
       id: detect-tesseract-linux
       shell: bash
-      run: |
-        set -euo pipefail
-        # Detect available tesseract-ocr version from apt
-        VERSION=$(apt-cache policy tesseract-ocr 2>/dev/null | grep 'Candidate:' | grep -oP '\d+\.\d+' | head -1 || echo 'unknown')
-        echo "version=${VERSION}" >> $GITHUB_OUTPUT
-        echo "::notice title=Tesseract Version::Detected version: ${VERSION}"
+      run: bash scripts/ci/install-system-deps/detect-tesseract-linux.sh
 
     - name: Cache Tesseract data (Linux)
       if: runner.os == 'Linux'
@@ -178,128 +85,7 @@ runs:
     - name: Install dependencies (Linux)
       if: runner.os == 'Linux'
       shell: bash
-      run: |
-        set -euo pipefail
-
-        echo "::group::Installing Linux dependencies"
-
-        # Set up retry function with exponential backoff
-        retry_with_backoff() {
-          local cmd=("$@")
-          local max_attempts=3
-          local attempt=1
-          local delay=5
-
-          while [ $attempt -le $max_attempts ]; do
-            echo "Attempt $attempt of $max_attempts: ${cmd[*]}"
-
-            if "${cmd[@]}"; then
-              return 0
-            fi
-
-            if [ $attempt -lt $max_attempts ]; then
-              echo "⚠ Attempt $attempt failed, retrying in ${delay}s..." >&2
-              sleep $delay
-              delay=$((delay * 2))
-            fi
-            attempt=$((attempt + 1))
-          done
-
-          return 1
-        }
-
-        # Update package index with retry
-        echo "Updating package index..."
-        if ! retry_with_backoff sudo apt-get update; then
-          echo "::warning::apt-get update failed after retries, continuing anyway..."
-        fi
-
-        # Install packages with timeout and retry
-        PACKAGES="libreoffice libreoffice-writer libreoffice-calc libreoffice-impress tesseract-ocr tesseract-ocr-eng tesseract-ocr-tur tesseract-ocr-deu fonts-liberation fonts-dejavu-core fonts-noto-core libssl-dev pkg-config build-essential"
-
-        echo "Installing dependencies..."
-        if timeout 900 retry_with_backoff sudo apt-get install -y $PACKAGES; then
-          echo "✓ All packages installed successfully"
-        else
-          EXIT_CODE=$?
-          if [ $EXIT_CODE -eq 124 ]; then
-            echo "::error::Package installation timed out after 15 minutes"
-          else
-            echo "::warning::Some packages failed to install, attempting individual installs..."
-            # Try installing critical packages individually
-            for pkg in tesseract-ocr libreoffice libssl-dev pkg-config; do
-              echo "Installing $pkg..."
-              if timeout 300 sudo apt-get install -y "$pkg" 2>&1; then
-                echo "  ✓ $pkg installed"
-              else
-                echo "  ⚠ Failed to install $pkg"
-              fi
-            done
-          fi
-        fi
-
-        echo "::endgroup::"
-
-        # Verify installations
-        echo "::group::Verifying Linux installations"
-
-        echo "LibreOffice:"
-        if soffice --version 2>/dev/null; then
-          echo "✓ LibreOffice available"
-        else
-          echo "⚠ Warning: LibreOffice not fully available"
-        fi
-
-        echo ""
-        echo "Tesseract:"
-        if tesseract --version 2>/dev/null | head -1; then
-          echo "✓ Tesseract available"
-        else
-          echo "::error::Tesseract not found or failed to run"
-          exit 1
-        fi
-
-        echo ""
-        echo "Available Tesseract languages:"
-        tesseract --list-langs | head -10
-
-        # Verify Tesseract data path
-        echo ""
-        echo "Checking Tesseract data path..."
-
-        TESSDATA_FOUND=0
-        for TESSDATA_PATH in "/usr/share/tesseract-ocr/5/tessdata" "/usr/share/tesseract-ocr/tessdata"; do
-          if [ -d "$TESSDATA_PATH" ]; then
-            echo "Found tessdata at: $TESSDATA_PATH"
-
-            echo "Required language files:"
-            for lang in eng tur deu; do
-              if [ -f "$TESSDATA_PATH/${lang}.traineddata" ]; then
-                size=$(stat -c%s "$TESSDATA_PATH/${lang}.traineddata" 2>/dev/null || echo "unknown")
-                echo "  ✓ ${lang}.traineddata ($size bytes)"
-              else
-                echo "  ⚠ ${lang}.traineddata (missing)"
-              fi
-            done
-            TESSDATA_FOUND=1
-            break
-          fi
-        done
-
-        if [ $TESSDATA_FOUND -eq 0 ]; then
-          echo "::error::Tessdata directory not found in standard locations"
-          exit 1
-        fi
-
-        echo ""
-        echo "Testing LibreOffice headless mode..."
-        if timeout 30 soffice --headless --version >/dev/null 2>&1; then
-          echo "✓ LibreOffice headless mode works"
-        else
-          echo "⚠ Warning: LibreOffice headless test failed (may still work)"
-        fi
-
-        echo "::endgroup::"
+      run: bash scripts/ci/install-system-deps/install-linux.sh
 
     # ============================================================================
     # Windows: Tesseract & LibreOffice Installation with Caching via Chocolatey
@@ -330,131 +116,6 @@ runs:
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       shell: pwsh
-      run: |
-        $ErrorActionPreference = "Stop"
-
-        Write-Host "::group::Installing Windows dependencies"
-
-        # Helper function for retry with exponential backoff
-        function Retry-Command {
-          param(
-            [scriptblock]$Command,
-            [int]$MaxAttempts = 3,
-            [int]$DelaySeconds = 5
-          )
-
-          $attempt = 1
-          while ($attempt -le $MaxAttempts) {
-            try {
-              Write-Host "Attempt $attempt of $MaxAttempts..."
-              & $Command
-              return $true
-            }
-            catch {
-              $attempt++
-              if ($attempt -le $MaxAttempts) {
-                $backoffDelay = $DelaySeconds * [Math]::Pow(2, $attempt - 1)
-                Write-Host "⚠ Attempt failed, retrying in ${backoffDelay}s..." -ForegroundColor Yellow
-                Start-Sleep -Seconds $backoffDelay
-              }
-              else {
-                return $false
-              }
-            }
-          }
-        }
-
-        # Check cache status
-        $tesseractCacheHit = "${{ steps.cache-tesseract-windows.outputs.cache-hit }}" -eq "true"
-        $libreofficeInstalled = Test-Path "C:\Program Files\LibreOffice\program\soffice.exe"
-
-        # Install Tesseract with retry
-        if (-not $tesseractCacheHit) {
-          Write-Host "Tesseract cache miss, installing..."
-          if (-not (Retry-Command { choco install -y tesseract --no-progress } -MaxAttempts 3)) {
-            throw "Failed to install Tesseract after 3 attempts"
-          }
-          Write-Host "✓ Tesseract installed"
-        }
-        else {
-          Write-Host "✓ Tesseract found in cache"
-        }
-
-        # Install LibreOffice with timeout and retry
-        if (-not $libreofficeInstalled) {
-          Write-Host "LibreOffice not found, installing (timeout: 20min)..."
-
-          $job = Start-Job -ScriptBlock {
-            choco install -y libreoffice --no-progress
-          }
-
-          # Wait for up to 20 minutes
-          $completed = $job | Wait-Job -Timeout 1200
-
-          if (-not $completed) {
-            $job | Stop-Job -Force
-            throw "LibreOffice installation timed out after 20 minutes"
-          }
-
-          $result = $job | Receive-Job
-          $exitCode = $job.JobStateInfo.State
-
-          if ($exitCode -ne "Completed") {
-            Write-Host "LibreOffice installation failed"
-            Write-Host "Output: $result"
-            throw "LibreOffice installation failed"
-          }
-
-          Write-Host "✓ LibreOffice installed"
-        }
-        else {
-          Write-Host "✓ LibreOffice already installed"
-        }
-
-        # Add to PATH
-        Write-Host "Configuring PATH..."
-        $paths = @(
-          "C:\Program Files\LibreOffice\program",
-          "C:\Program Files\Tesseract-OCR"
-        )
-
-        foreach ($path in $paths) {
-          if (Test-Path $path) {
-            Write-Output $path | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-            $env:PATH = "$path;$env:PATH"
-          }
-        }
-
-        Write-Host "::endgroup::"
-
-        # Verify installations
-        Write-Host "::group::Verifying Windows installations"
-
-        Write-Host "LibreOffice:"
-        try {
-          & soffice --version 2>$null
-          Write-Host "✓ LibreOffice available"
-        }
-        catch {
-          Write-Host "⚠ Warning: LibreOffice verification failed"
-        }
-
-        Write-Host ""
-        Write-Host "Tesseract:"
-        & tesseract --version
-
-        Write-Host ""
-        Write-Host "Available Tesseract languages:"
-        & tesseract --list-langs
-
-        Write-Host ""
-        Write-Host "Tesseract installation location:"
-        $tesseractPath = (Get-Command tesseract -ErrorAction SilentlyContinue).Path
-        if ($tesseractPath) {
-          Write-Host "  $tesseractPath"
-        }
-        else {
-          Write-Host "  ⚠ Could not determine tesseract path"
-        }
-
-        Write-Host "::endgroup::"
+      env:
+        TESSERACT_CACHE_HIT: ${{ steps.cache-tesseract-windows.outputs.cache-hit }}
+      run: pwsh -File scripts/ci/install-system-deps/install-windows.ps1
