--- a/e2e/smoke/node/package.json
+++ b/e2e/smoke/node/package.json
@@ -6,7 +6,7 @@
 		"check": "node smoke.mjs"
 	},
 	"dependencies": {
-		"@kreuzberg/node": "4.0.0-rc.8"
+		"@kreuzberg/node": "workspace:*"
 	},
 	"version": "4.0.0-rc.8"
 }
