feat(kreuzberg): add PDFIUM_STATIC_LIB_PATH support for Docker static linking
Problem:
- pdf-static feature panics when building because libpdfium.a is not available
- bblanchon/pdfium-binaries only provides dynamic libraries (.so/.dylib/.dll)
- Docker deployments with musl require true static linking
- Previous error mentioned PDFIUM_STATIC_LIB_PATH but code didn't implement it

Solution:
Implement PDFIUM_STATIC_LIB_PATH environment variable support in build.rs:
- Check for PDFIUM_STATIC_LIB_PATH before attempting to download
- Validate that the path exists and contains libpdfium.a
- Link against the custom static library with proper system dependencies
- Provide comprehensive error message with actionable steps if not found

Changes:
1. build.rs: Add PDFIUM_STATIC_LIB_PATH handling in link_statically()
   - Early return path for custom static library
   - Validation with clear error messages
   - Platform-specific system library linking (pthread, dl, ws2_32, userenv)
   - Updated error message with example Dockerfile pattern

2. Cargo.toml: Update feature documentation
   - Clarify pdf-static requires PDFIUM_STATIC_LIB_PATH
   - Document pdf-bundled as dynamic link with embedded library

3. build.rs: Add comprehensive header documentation
   - Document all four linking strategies
   - List all environment variables
   - Explain use cases for each approach

Benefits:
- Enables Docker builds with musl without 30-60 minute pdfium compilation
- Users can pre-build or download static pdfium once and reuse
- Clear error messages guide users to solution
- Backwards compatible (existing dynamic/bundled/system modes unchanged)

Usage example:
  export PDFIUM_STATIC_LIB_PATH=/path/to/pdfium/lib
  cargo build --features pdf,pdf-static --target x86_64-unknown-linux-musl

--- a/crates/kreuzberg/Cargo.toml
+++ b/crates/kreuzberg/Cargo.toml
@@ -26,8 +26,8 @@ tokio-runtime = ["dep:tokio"]
 
 # Format extractors
 pdf = ["dep:pdfium-render", "dep:lopdf", "dep:image"]
-pdf-static = ["pdf"] # Download + static link (no runtime dependency)
-pdf-bundled = ["pdf"] # Embed library in binary (self-contained)
+pdf-static = ["pdf"] # Static link (no runtime dep) - requires PDFIUM_STATIC_LIB_PATH env var
+pdf-bundled = ["pdf"] # Embed library in binary (self-contained, dynamic link)
 pdf-system = ["pdf"] # Use system-installed pdfium via pkg-config
 excel = ["dep:calamine", "dep:polars", "tokio-runtime"]
 office = [
