chore(release): 4.0.0-rc.9

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -30,24 +30,7 @@ linker = "x86_64-w64-mingw32-gcc"
 ar = "ar"
 
 [target.wasm32-unknown-unknown]
-rustflags = [
-    "-C",
-    "target-feature=+atomics,+bulk-memory",
-    "-C",
-    "link-arg=--shared-memory",
-    "-C",
-    "link-arg=--max-memory=2147483648",
-    "-C",
-    "link-arg=--import-memory",
-    "-C",
-    "link-arg=--export=__wasm_init_tls",
-    "-C",
-    "link-arg=--export=__tls_size",
-    "-C",
-    "link-arg=--export=__tls_align",
-    "-C",
-    "link-arg=--export=__tls_base",
-]
+rustflags = ["-C", "target-feature=+bulk-memory"]
 
 [unstable]
 build-std = ["panic_abort", "std"]
