--- a/crates/kreuzberg/Cargo.toml
+++ b/crates/kreuzberg/Cargo.toml
@@ -81,6 +81,7 @@ otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry
 
 # WASM-compatible feature bundle
 wasm-target = ["html", "xml", "email", "language-detection", "chunking", "quality"]
+wasm-threads = ["dep:wasm-bindgen-rayon"]
 
 # Convenience bundles
 full = [
@@ -158,7 +159,7 @@ fb2 = { version = "0.4", optional = true }
 typst-syntax = { version = "0.14", optional = true }
 
 # Processing features (optional)
-kreuzberg-tesseract = { version = "4.0.0-rc.8", optional = true }
+kreuzberg-tesseract = { version = "4.0.0-rc.9", optional = true }
 image = { workspace = true, default-features = false, features = [
     "png",
     "jpeg",
@@ -222,4 +223,4 @@ harness = false
 pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-rayon = "1.3"
+wasm-bindgen-rayon = { version = "1.3", optional = true }
