chore: extensive fixes for static linking

--- a/ai-rulez.yaml
+++ b/ai-rulez.yaml
@@ -141,13 +141,13 @@ sections:
   - name: Go Kreuzberg Bindings
     priority: high
     content: |
-      **Role**: Go bindings for Kreuzberg Rust core. Work on CGO bridge (packages/go/kreuzberg) and Go SDK/E2E suite (packages/go + e2e/go).
+      **Role**: Go bindings for Kreuzberg Rust core. Work on CGO bridge (packages/go/v4) and Go SDK/E2E suite (packages/go/v4 + e2e/go).
 
       **Scope**: Go 1.25 module, cgo wrappers around kreuzberg-ffi, Go-idiomatic config/result structs, golangci-lint setup, benchmark harness scripts.
 
-      **Commands**: cd packages/go && go test ./..., golangci-lint run --config ../../.golangci.yml ./..., ensure `LD_LIBRARY_PATH`/`DYLD_LIBRARY_PATH` includes target/release when running tests.
+      **Commands**: cd packages/go/v4 && go test ./..., golangci-lint run --config ../../.golangci.yml ./..., ensure `LD_LIBRARY_PATH`/`DYLD_LIBRARY_PATH` includes target/release when running tests.
 
-      **FFI**: Binding header (packages/go/kreuzberg/binding.go) must stay in sync with kreuzberg-ffi C header. Add new APIs to Rust first, then expose through cgo, update types.go, regenerate Go E2E tests when fixtures change.
+      **FFI**: Binding header (packages/go/v4/binding.go) must stay in sync with kreuzberg-ffi C header. Add new APIs to Rust first, then expose through cgo, update types.go, regenerate Go E2E tests when fixtures change.
 
       **Critical**: Core logic lives in Rust. Go code should remain thin wrappers/helper utilities over C API. Coordinate with rust-engineer for shared logic.
 
@@ -454,15 +454,15 @@ agents:
   - name: go-bindings-engineer
     description: cgo bindings and Go SDK development
     system_prompt: |
-      **Role**: Go bindings for Kreuzberg Rust core. Work on CGO bridge (packages/go/kreuzberg) and Go SDK/E2E suite (packages/go + e2e/go).
+      **Role**: Go bindings for Kreuzberg Rust core. Work on CGO bridge (packages/go/v4) and Go SDK/E2E suite (packages/go/v4 + e2e/go).
 
       **Scope**: Go 1.25 module, cgo wrappers around kreuzberg-ffi, Go-idiomatic config/result structs, golangci-lint setup, benchmark harness scripts.
 
-      **Commands**: cd packages/go && go test ./..., golangci-lint run --config ../../.golangci.yml ./..., ensure `LD_LIBRARY_PATH`/`DYLD_LIBRARY_PATH` includes target/release when running tests.
+      **Commands**: cd packages/go/v4 && go test ./..., golangci-lint run --config ../../.golangci.yml ./..., ensure `LD_LIBRARY_PATH`/`DYLD_LIBRARY_PATH` includes target/release when running tests.
 
       **Critical**: Core logic lives in Rust. Go code should remain thin wrappers/helper utilities over the C API. Coordinate with rust-core-engineer for shared logic.
 
-      **FFI Sync**: Binding header (packages/go/kreuzberg/binding.go) must stay in sync with kreuzberg-ffi C header. Regenerate Go E2E tests when fixtures change.
+      **FFI Sync**: Binding header (packages/go/v4/binding.go) must stay in sync with kreuzberg-ffi C header. Regenerate Go E2E tests when fixtures change.
     model: haiku
 
   - name: test-automation-engineer
