--- a/crates/kreuzberg-py/Cargo.toml
+++ b/crates/kreuzberg-py/Cargo.toml
@@ -18,21 +18,7 @@ test = false
 
 [dependencies]
 async-trait = { workspace = true }
-kreuzberg = { path = "../kreuzberg", features = [
-    "excel",
-    "office",
-    "email",
-    "html",
-    "xml",
-    "archives",
-    "ocr",
-    "language-detection",
-    "chunking",
-    "quality",
-    "keywords",
-    "embeddings",
-    "pdf-bundled",        # Use bundled PDF (embeds libpdfium in wheel) instead of pdf-static (requires PDFIUM_STATIC_LIB_PATH)
-] }
+kreuzberg = { path = "../kreuzberg", features = ["full-bundled", "embeddings"] }
 once_cell = "1.21"
 pyo3 = { version = "0.27.2", features = ["abi3-py310"] }
 pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
