--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,9 @@ lint.ignore = [
   "TD",       # We allow todo and fixme comments
   "TRY",      # Try except block, rules are too strict
 ]
+lint.per-file-ignores."**/*.pyi" = [
+  "PYI021", # Docstrings in stub files are useful for IDE support and discoverability
+]
 lint.per-file-ignores."**/benchmarks/**/*.*" = [
   "BLE001",  # Blind exception catching (common in benchmarks)
   "C901",    # Function complexity (benchmarks can be complex)
