--- a/packages/ruby/ext/kreuzberg_rb/native/Cargo.toml
+++ b/packages/ruby/ext/kreuzberg_rb/native/Cargo.toml
@@ -31,12 +31,12 @@ default = []
 async-trait = "0.1.89"
 kreuzberg = { path = "../../../vendor/kreuzberg", features = [
     "full",
-    "static-pdfium",
+    "bundled-pdfium",
     "embeddings",
 ] }
 kreuzberg-ffi = { path = "../../../vendor/kreuzberg-ffi", features = [
     "embeddings",
-    "static-pdfium",
+    "bundled-pdfium",
 ] }
 magnus = { git = "https://github.com/matsadler/magnus", rev = "f6db11769efb517427bf7f121f9c32e18b059b38", features = [
     "rb-sys",
