fix: add disk space cleanup to CI workflows
Add free disk space step before Rust compilation in Python, Node, Ruby, Java,
and Go CI workflows to prevent "No space left on device" errors on Linux
runners. This step runs before expensive Rust builds and frees up ~20-30GB
by removing unnecessary system packages and Docker artifacts.

--- a/.github/workflows/ci-go.yaml
+++ b/.github/workflows/ci-go.yaml
@@ -70,6 +70,13 @@ jobs:
       - name: Install system dependencies
         uses: ./.github/actions/install-system-deps
 
+      - name: Free disk space before setup
+        if: matrix.os == 'ubuntu-latest'
+        uses: ./.github/actions/free-disk-space-linux
+        with:
+          show-initial: "true"
+          show-final: "true"
+
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
         with:
