--- a/.github/workflows/ci-java.yaml
+++ b/.github/workflows/ci-java.yaml
@@ -69,6 +69,13 @@ jobs:
       - name: Install system dependencies
         uses: ./.github/actions/install-system-deps
 
+      - name: Free disk space before setup
+        if: runner.os == 'Linux'
+        uses: ./.github/actions/free-disk-space-linux
+        with:
+          show-initial: "true"
+          show-final: "true"
+
       - name: Setup OpenSSL
         uses: ./.github/actions/setup-openssl
 
