--- a/.github/workflows/ci-ruby.yaml
+++ b/.github/workflows/ci-ruby.yaml
@@ -91,6 +91,13 @@ jobs:
       - name: Install system dependencies
         uses: ./.github/actions/install-system-deps
 
+      - name: Free disk space before setup
+        if: matrix.os == 'ubuntu-latest'
+        uses: ./.github/actions/free-disk-space-linux
+        with:
+          show-initial: "true"
+          show-final: "true"
+
       - name: Setup OpenSSL
         uses: ./.github/actions/setup-openssl
 
