--- a/e2e/wasm-deno/deno.json
+++ b/e2e/wasm-deno/deno.json
@@ -6,7 +6,7 @@
 	},
 	"imports": {
 		"@std/assert": "jsr:@std/assert@^0.224.0",
-		"npm:@kreuzberg/wasm@^4.0.0": "../../crates/kreuzberg-wasm/pkg/kreuzberg_wasm.js"
+		"npm:@kreuzberg/wasm@^4.0.0": "../../crates/kreuzberg-wasm/dist/index.mjs"
 	},
 	"compilerOptions": {
 		"lib": ["deno.window", "deno.unstable"],
